--- a/pyzoo/static/style.css
+++ b/pyzoo/static/style.css
@@ -55,7 +55,11 @@ div.time_clockout {
 #container {
 	width: 800px;
 	margin: auto;
+	padding: 30px;
 	background: #ffffff;
+    border-radius: 5px;
+    /*border: 1px solid #333;*/
+    box-shadow: 0px 0px 5px #333, inset 0px 0px 2px #333;
 }
 #background {
 	margin: 0px;
